tests/ui/subcommand_and_parse.stderr
error: proc-macro derive panicked
  --> $DIR/subcommand_and_parse.rs:11:10
   |
11 | #[derive(StructOpt)]
   |          ^^^^^^^^^
   |
   = help: message: parse attribute is not allowed for subcommand
